<resources>
    <string name="app_name">Data Aset</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="history">History</string>
    <string name="Request_user">Request</string>
    <string name="request">Request</string>
    <string name="logout">Logout</string>
    <string name="tambahaset">Tambah Aset</string>
    <string name="lihataset">Lihat Aset</string>

    <string-array name="nama_tempat">
        <item>Ruang Dosen</item>
        <item>Ruang TU</item>
        <item>Ruang Dekan</item>
        <item>Ruang Wakil Dekan</item>
        <item>Ruang Sekertaris</item>
        <item>Ruang BPSI</item>
    </string-array>
</resources>
