<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/tambahaset"
            android:icon="@drawable/add"
            android:title="@string/tambahaset" />

        <item
            android:id="@+id/lihatasetadmin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lihataset" />
        <item
            android:id="@+id/requestAmbil"
            android:icon="@drawable/request"
            android:title="@string/request" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
