<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.joshua.r0th.dataaset.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/lihatasetadmin"
        android:name="com.joshua.r0th.dataaset.ui.lihat_aset.lihat_asetAdmin"
        android:label="@string/lihataset"
        tools:layout="@layout/history_admin" />

    <fragment
        android:id="@+id/tambahaset"
        android:name="com.joshua.r0th.dataaset.ui.tambah_aset.tambah_asetAdmin"
        android:label="@string/tambahaset"
        tools:layout="@layout/tambah_aset" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.joshua.r0th.dataaset.ui.lihat_aset.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/requestAmbil"
        android:name="com.joshua.r0th.dataaset.ui.request.lihatrequesUser"
        android:label="@string/request"
        tools:layout="@layout/lihatrequestdariuser" />
    <fragment
        android:id="@+id/requestKirimUser"
        android:name="com.joshua.r0th.dataaset.ui.request.requestdariUser"
        android:label="@string/request"
        tools:layout="@layout/requestdariuser" />

    <fragment
        android:id="@+id/history"
        android:name="com.joshua.r0th.dataaset.ui.request.HistoryRequestAdmin"
        android:label="@string/history"
        tools:layout="@layout/history_request_admin" />
    <fragment
        android:id="@+id/historyUser"
        android:name="com.joshua.r0th.dataaset.ui.request.historyRequestUser"
        android:label="@string/history"
        tools:layout="@layout/history_request_user" />
    <fragment
        android:id="@+id/lihatasetuser"
        android:name="com.joshua.r0th.dataaset.ui.lihat_aset.lihat_asetUser"
        android:label="@string/lihataset"
        tools:layout="@layout/lihat_aset" />

    <fragment
        android:id="@+id/logout"
        android:name="com.joshua.r0th.dataaset.ui.logout.logout"
        android:label="@string/logout"
        tools:layout="@layout/logout" />

</navigation>